flex wrap issues IE/Safari

--- a/src/scss/experimental.scss
+++ b/src/scss/experimental.scss
@@ -1,6 +1,6 @@
-$gutter-width: .1em !default;
 $max-columns: 12 !default;
-$breakpoints: (xs: '(min-width: 0) and (max-width: 599px)', sm: '(min-width: 600px) and (max-width: 959px)', md: '(min-width: 960px) and (max-width: 1280px)', lg: 'only screen and (min-width: 1280px)');
+$max-gutters: 5 !default;
+$breakpoints: ( xs: '(min-width: 0) and (max-width: 599px)', sm: '(min-width: 600px) and (max-width: 959px)', md: '(min-width: 960px) and (max-width: 1280px)', lg: 'only screen and (min-width: 1280px)');
 @mixin prefix($property, $value, $vendors: webkit moz ms o) {
   @if $vendors {
     @each $vendor in $vendors {
@@ -26,37 +26,34 @@ $breakpoints: (xs: '(min-width: 0) and (max-width: 599px)', sm: '(min-width: 600
   @include prefix(justify-content, $value, webkit);
 }
 
-@mixin rowMachine($numCol, $columns, $gutter) {
-  $width: calc(#{percentage($numCol / $columns)} - #{$gutter} * 2);
-  @include flex(0 1 auto);
-  min-width: $width;
+@mixin rowMachine($numCol, $columns) {
+  position: relative;
+  $width: percentage($numCol / $columns);
+  @include flex(0 0 $width);
+  width: $width;
   max-width: 100%;
   min-height: 1px;
-  margin: $gutter;
-  box-sizing: border-box;
-
-  &.flex-grow {
-    flex: 1 1 auto;
-  }
-
-  &.flex-auto {
-    flex: 1 1 auto;
-  }
-
-  &.flex-none {
-    flex: 0 0 auto;
-  }
+  min-width: 100px; // TODO: REMOVE
+  background-color: cornflowerblue; // TODO: REMOVE
+  margin: 0;
 }
 
 %flexit {
   @include flex-wrap(nowrap);
-  display: -webkit-box; /* iOS 6-, Safari 3.1-6 */
-  display: -moz-box; /* Firefox 19- (buggy but mostly works) */
-  display: -ms-flexbox; /* IE 10 -_- */
-  display: -webkit-flex; /* MODERN - Chrome */
-  display: flex; /* MODERN, Spec - Opera 12.1, Firefox 20+ */
+  display: -webkit-box;
+  /* iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;
+  /* IE 10 -_- */
+  display: -webkit-flex;
+  /* MODERN - Chrome */
+  display: flex;
+  /* MODERN, Spec - Opera 12.1, Firefox 20+ */
   min-height: 100%;
   width: 100%;
+  height: 100px; // TODO: REMOVE
+  background-color: lightgrey; // TODO: REMOVE
 }
 
 %decorators {
@@ -96,12 +93,27 @@ $breakpoints: (xs: '(min-width: 0) and (max-width: 599px)', sm: '(min-width: 600
   @extend %flexit;
   @extend %decorators;
   @include flex-direction(row);
+
+  @for $i from 0 through $max-gutters {
+    $counter: 0 + '.#{$i}em';
+    &.gutter-#{$i} {
+      [class*='col-']:nth-child(n) {
+        $width: percentage($i / $max-columns);
+        @if $i > 0 {
+          $width: calc(#{$width} - (#{$counter} * 2));
+          @include flex(0 0 $width);
+          width: $width;
+          margin: #{$counter};
+        }
+      }
+    }
+  }
 }
 
 // Generate Simple
 @for $i from 1 through $max-columns {
   .col-#{$i} {
-    @include rowMachine($i, $max-columns, $gutter-width);
+    @include rowMachine($i, $max-columns);
   }
 }
 
@@ -111,7 +123,7 @@ $value in $breakpoints {
   @media #{$value} {
     @for $i from 1 through $max-columns {
       .col-#{$name}-#{$i} {
-        @include rowMachine($i, $max-columns, $gutter-width);
+        @include rowMachine($i, $max-columns);
       }
     }
   }
